rename cluster to instance
